@@ -48,8 +48,8 @@ void silc_client_send_private_message(SilcClient client,
   SILC_LOG_DEBUG(("Sending private message"));
 
   /* Encode private message payload */
-  buffer = silc_private_message_payload_encode(strlen(conn->nickname),
-					       conn->nickname, 0,
+  buffer = silc_private_message_payload_encode(0, strlen(conn->nickname),
+					       conn->nickname,
 					       data_len, data,
 					       client_entry->send_key);
 
